# JADE-SpaceApps

./: README.md  core_product_overview.txt  mvp_desc.txt
gazebo/: README.md
gazebo/models/astro_dock/: model.config  model.sdf
gazebo/models/satellite/: model.config  model.sdf
gazebo/plugins/: CMakeLists.txt  README.md
gazebo/plugins/lib/: libdocking_controller.dylib
gazebo/plugins/scripts/: random_walk.py
gazebo/plugins/src/: docking_controller.cc  random_movement_controller.cc  realistic_thruster_controller.cc  thruster_controller.cc
gazebo/worlds/: leo_world.sdf  leo_world_local.sdf
gazebo_new/: CMakeLists.txt  CONTROLLER_IMPROVEMENTS_V3.md  EQUATIONS_ACTUALLY_IMPLEMENTED.md  MOVEMENT_OPTIMIZATION.md  PD_CONTROLLER_FIX.md  QUICKSTART.md  README.md  REALISTIC_PHYSICS.md  SUCCESS.txt  V2_FEATURES.txt  VERSION_2_NOTES.md  check_setup.sh  generate_scenario.py  gui_dashboard.config  randomize_poses.py  run_advanced.sh  run_realistic.sh  run_simulation.sh  start_mission.sh  test_debug.sh
gazebo_new/models/chaser/: model.config  model.sdf
gazebo_new/models/dock/: model.config  model.sdf
gazebo_new/src/: advanced_orbital_controller.cpp  docking_dashboard.cpp  docking_dashboard_simple.cpp  realistic_orbital_controller.cpp  thruster_controller.cpp  vision_based_orbital_controller.cpp
gazebo_new/worlds/: leo.sdf  leo_advanced.sdf  leo_realistic.sdf  leo_vision.sdf
models/CV Satellite Classification/YOLOv8 Satellite Data/: README.dataset.txt  README.roboflow.txt
models/CV Satellite Classification/YOLOv8 Satellite Data/test/labels/: img_resize_1127_png_jpg.rf.f155031cbfb9ac74fa68791c8897bd9b.txt  img_resize_37_png_jpg.rf.716e6a0100bfbb195fd912dd3e8872b5.txt
models/CV Satellite Classification/YOLOv8 Satellite Data/train/labels/: 14_jpeg_jpg.rf.b9c8fd03b6994ddb0e35da654d54364d.txt  1_jpeg_jpg.rf.03ba9b45e7efb8d7823ff6193c87f13e.txt  9_jpeg_jpg.rf.a44b26c6b1382021399baf91f16d9af6.txt  AI_Generated_Image-5-_jpeg_jpg.rf.a23f2f30417c40e57669ec777863738f.txt  img_resize_1071_png_jpg.rf.19399fba571e1e03a8945eecc38544d7.txt  img_resize_1081_png_jpg.rf.3b2d97e8ce20346afb3530bfe2e1992a.txt  img_resize_1082_png_jpg.rf.81e9c2a1fda0831daeb1784a12e01149.txt  img_resize_1088_png_jpg.rf.1f0fc14b66f41a78bbe15814dfcc65bb.txt  img_resize_1115_png_jpg.rf.b4e746dcb8f5401b9da7cb64afa5facf.txt  img_resize_1134_png_jpg.rf.016213078cee21d31633e3761b492bdd.txt  img_resize_1175_png_jpg.rf.7fc83450909bfcb8d3fdc25805046394.txt  img_resize_1207_png_jpg.rf.0d95a5fd4df4eecbd832127c47e51b14.txt  img_resize_1214_png_jpg.rf.fd161617ca22b1a793720969c40fcfa5.txt  img_resize_1223_png_jpg.rf.39a2e03389da7064d2fe62e32f4fa2bf.txt  img_resize_1245_png_jpg.rf.37572810013ff6e892d1d992d352a7b2.txt  img_resize_1304_png_jpg.rf.8c00530255f74843640ad17dfc4f0265.txt  img_resize_1449_png_jpg.rf.5e348e9710d2407605716c525ec24c04.txt  img_resize_1489_png_jpg.rf.735b6ea60f919f579ce967ad7a9e3dd4.txt  img_resize_1496_png_jpg.rf.1ce0a00a9611e6738fed09dde9793283.txt  img_resize_1515_png_jpg.rf.2a05b849866130a919d6b90632aeed96.txt  img_resize_1527_png_jpg.rf.597d73d2d1999777a5d0559ac0ece8eb.txt  img_resize_153_png_jpg.rf.c437275fec7adddbbb367e11b04ab7ec.txt  img_resize_1550_png_jpg.rf.a1a6c72388111fdbce843aa9cb13efc3.txt  img_resize_1571_png_jpg.rf.7a0da34b03b73d1ec7a852405e4914e9.txt  img_resize_1573_png_jpg.rf.079611d156b83f88a3d5a60a11aa1684.txt  img_resize_1592_png_jpg.rf.6b1e65cc5969b5286b213d25b2a5d9b3.txt  img_resize_1606_png_jpg.rf.52daab721b307c37c001ee8a43c0dae6.txt  img_resize_1619_png_jpg.rf.2e9a8ad1108aa9138ca08c420e2f46e1.txt  img_resize_1623_png_jpg.rf.4deabe89937e6b1b2a1acff6ffb975ee.txt  img_resize_1636_png_jpg.rf.6f9bdccd9a70fdb41027626e9a95af7b.txt  img_resize_1642_png_jpg.rf.2c10f17219c6aa12bae838d9d7129a00.txt  img_resize_1668_png_jpg.rf.24a031ab821d6a4a17eac90940771cb0.txt  img_resize_1731_png_jpg.rf.86a24f8d3ce69187c1acd8c2ac3a92bf.txt  img_resize_1755_png_jpg.rf.36a7919b4ebd312959dfae99588b5d2e.txt  (+48 more)
models/CVMV Satellite Classification Modelling/Local Training - Init Test/: requirements.txt  train_satellite_detector.py
models/CVMV Satellite Classification Modelling/Working - Collab (GPU Outsorce)/: FINAL_Satellite_CV_Training.ipynb
models/CVMV Satellite Classification Modelling/Working - Collab (GPU Outsorce)/FINAL DATA - Proper Trial/: detect_satellite_video.py  detect_satellite_video2.py  requirements.txt
models/CVMV Satellite Classification Modelling/Working - Collab (GPU Outsorce)/Pre-Trial 1/: results.csv  training_results.json
models/CVMV Satellite Classification Modelling/YOLOv8 Satellite Data/: data.yaml
models/Li-Ion PCoE Degradation Modelling/: IMPROVEMENTS_SUMMARY.md  README.md  requirements.txt
models/Li-Ion PCoE Degradation Modelling/degradation_modelling/: README.md  __init__.py  compute_soh_rul.py  config.py  example_usage.py  feature_engineering.py  modeling.py  parse_mat_files.py  pipeline_summary.py  quick_train.py  requirements.txt  run_pipeline.py  test_pipeline.py  train_model.py
models/Li-Ion PCoE Degradation Modelling/degradation_modelling/artifacts/: feature_schema.json  gbm_model.joblib  lstm_encoder.pth  metrics.json  model_metadata.json  performance_summary.json  training_summary.joblib
models/Li-Ion PCoE Degradation Modelling/ionenv/: pyvenv.cfg
models/Li-Ion PCoE Degradation Modelling/ionenv/Scripts/: activate  activate.bat
models/Li-Ion PCoE Degradation Modelling/src/battery_rul/: __init__.py  data_loader.py  feature_engineering.py  modeling.py  train.py
models/Li-Ion PCoE Degradation Modelling/visualizations/: generate_figures_2.py
models/SMAP General Sensor Anomaly Detection/: SMAP_Satellite_Sensor_General_Anomaly_Modelling.ipynb  requirements.txt  smap_pipeline.py
models/visualizations/: baseline_metrics.json  generate_visualizations.py
old-arm-code/: SerialTest.py
robot_arm/: README.md  config.py  main.py  requirements.txt
robot_arm/arduino/: arm_controller.ino
robot_arm/control/: arm_control.py  serial_comm.py
robot_arm/planning/: kinematics.py  trajectory.py
robot_arm/tests/: test_ik.py
robot_arm/vision/: depth.py  tracker.py
(+618 files in other folders)
