cmake_minimum_required(VERSION 3.10)
project(thruster_controller)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

# Find Gazebo Sim packages (modern Gazebo uses unversioned package names)
find_package(gz-sim REQUIRED)
if (gz-sim_FOUND)
  set(GZ_SIM_TARGET gz-sim::gz-sim)
  message(STATUS "Found ${GZ_SIM_TARGET}")
else()
  # Fallback to Ignition Gazebo (legacy)
  set(IGN_GAZEBO_CANDIDATES 6 5 4)
  foreach(ver ${IGN_GAZEBO_CANDIDATES})
    find_package(ignition-gazebo${ver} QUIET)
    if (ignition-gazebo${ver}_FOUND)
      set(GZ_SIM_TARGET ignition-gazebo${ver}::ignition-gazebo${ver})
      message(STATUS "Found ${GZ_SIM_TARGET}")
      break()
    endif()
  endforeach()
endif()
if (NOT GZ_SIM_TARGET)
  message(FATAL_ERROR "Could not find gz-sim or ignition-gazebo. Please install Gazebo Sim dev packages.")
endif()

# Find Gazebo Transport
find_package(gz-transport REQUIRED)
if (gz-transport_FOUND)
  set(GZ_TRANSPORT_TARGET gz-transport::core)
  message(STATUS "Found gz-transport")
else()
  message(FATAL_ERROR "gz-transport not found")
endif()

# Find Gazebo Messages
find_package(gz-msgs REQUIRED)
if (gz-msgs_FOUND)
  set(GZ_MSGS_TARGET gz-msgs::gz-msgs)
  message(STATUS "Found gz-msgs")
else()
  message(FATAL_ERROR "gz-msgs not found")
endif()

# Find Gazebo Math
find_package(gz-math REQUIRED)
if (gz-math_FOUND)
  set(GZ_MATH_TARGET gz-math::gz-math)
  message(STATUS "Found gz-math")
else()
  message(FATAL_ERROR "gz-math not found")
endif()

# Find Gazebo Plugin (optional)
find_package(gz-plugin QUIET)
if (gz-plugin_FOUND)
  set(GZ_PLUGIN_TARGET gz-plugin::gz-plugin)
  message(STATUS "Found gz-plugin")
endif()
# gz-plugin is optional here; the register header is header-only macro, but link if present

add_library(thruster_controller SHARED src/thruster_controller.cc)
target_link_libraries(thruster_controller PRIVATE ${GZ_SIM_TARGET} ${GZ_TRANSPORT_TARGET} ${GZ_MATH_TARGET} ${GZ_MSGS_TARGET})
if (GZ_PLUGIN_TARGET)
  target_link_libraries(thruster_controller PRIVATE ${GZ_PLUGIN_TARGET})
endif()

add_library(docking_controller SHARED src/docking_controller.cc)
target_link_libraries(docking_controller PRIVATE ${GZ_SIM_TARGET} ${GZ_TRANSPORT_TARGET} ${GZ_MATH_TARGET} ${GZ_MSGS_TARGET})
if (GZ_PLUGIN_TARGET)
  target_link_libraries(docking_controller PRIVATE ${GZ_PLUGIN_TARGET})
endif()

add_library(realistic_thruster_controller SHARED src/realistic_thruster_controller.cc)
target_link_libraries(realistic_thruster_controller PRIVATE ${GZ_SIM_TARGET} ${GZ_TRANSPORT_TARGET} ${GZ_MATH_TARGET} ${GZ_MSGS_TARGET})
if (GZ_PLUGIN_TARGET)
  target_link_libraries(realistic_thruster_controller PRIVATE ${GZ_PLUGIN_TARGET})
endif()

add_library(random_movement_controller SHARED src/random_movement_controller.cc)
target_link_libraries(random_movement_controller PRIVATE ${GZ_SIM_TARGET} ${GZ_TRANSPORT_TARGET} ${GZ_MATH_TARGET} ${GZ_MSGS_TARGET})
if (GZ_PLUGIN_TARGET)
  target_link_libraries(random_movement_controller PRIVATE ${GZ_PLUGIN_TARGET})
endif()

install(TARGETS thruster_controller docking_controller realistic_thruster_controller random_movement_controller DESTINATION lib)
